# napari-feature-classifier

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
.github/workflows/: build.yml  test_and_deploy.yaml
.napari-hub/: config.yml
docs/: index.md
examples/: classifier_data_example_max.py  jupyter_classifier_workflow.ipynb  simple_classifier_example.ipynb
playground/: magic_gui_playground.ipynb
src/napari_feature_classifier/: 20211119_ABpanelTestset_3pair_3.5h_1_s6_annotations.csv  Annotations.csv  Classifier_output.csv  __init__.py  annotation_lbls.csv  annotation_lbls2.csv  annotator_init_widget.py  annotator_widget.py  annotator_widget_v2.py  annotator_widget_v3.py  classifier.py  classifier_new.py  classifier_widget.py  classifier_widgets.py  data.py  dev_main.py  feature_loader_widget.py  label_layer_selector.py  label_selection_tests.py  layer_selection_plugin.py  lbl_annotations.csv  napari colormap updating tests.py  napari.yaml  test.csv  utils.py
src/napari_feature_classifier/_tests/: test_annotator_widgets.py  test_classifier.clf  test_classifier.py  test_classifier_widget.py  test_dock_widget.py  test_feature_loading.py
src/napari_feature_classifier/sample_data/: test_df.csv  test_labels.tif  test_labels_classifier.clf
