[metadata]
name = napari-feature-classifier
version = 0.0.1
author = Joel Luethi and Max Hess
author_email = joel.luethi@uzh.ch
url = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier

license = BSD-3-Clause
description = An interactive classifier plugin to use with label images and feature measurements
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    napari
    matplotlib
    magicgui
    pandas
    scikit-learn

[options.packages.find]
where = src

[options.package_data]
napari-feature-classifier =
    napari.yaml

[options.entry_points]
napari.manifest =
    napari-feature-classifier = napari_feature_classifier:napari.yaml
