[metadata]
name = napari-feature-classifier
version = 0.1.1
author = Joel Luethi and Max Hess
author_email = joel.luethi@uzh.ch
url = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier
project_urls =
    Bug Tracker = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier/issues
    Documentation = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier#napari-feature-classifier
    Source Code = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier
    User Support = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier/issues

license = BSD-3-Clause
description = An interactive classifier plugin to use with label images and feature measurements
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
include_package_data = True
python_requires = >=3.9
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    napari < 0.4.19
    matplotlib
    magicgui
    pandas
    scikit-learn >= 1.2.2
    pandera < 0.20.0
    xxhash
    hypothesis

[options.packages.find]
where = src

[options.package_data]
napari-feature-classifier =
    napari.yaml

[options.entry_points]
napari.manifest =
    napari-feature-classifier = napari_feature_classifier:napari.yaml

[coverage:run]
omit =
    src/napari_feature_classifier/dev_main.py
